fix: scrollbar

--- a/src/styles/prototypes/dashboard/layout.css
+++ b/src/styles/prototypes/dashboard/layout.css
@@ -1,3 +1,7 @@
+html:has(.dashboard-layout) {
+  scrollbar-gutter: stable;
+}
+
 .dashboard-layout {
   display: flex;
   align-items: flex-start;
